# server

./: .gitignore  CMakeLists.txt  la.txt  plan.txt  py.py  tests.py  дип.docx
headers/: checksum.h  client.h  constants.h  consumer.h  context.h  dictionary.h  event.h  server.h
headers/data_structures/: btree.h  heap.h  queue.h
headers/event_handlers/: confirm_handler.h  prepare_event_handler.h  put_event_handler.h  receive_event_handler.h  send_event_handler.h  time_expired_handler.h
model/: main.py  model.py  model_old.py  model_old_new.py  tests.py
src/: checksum.c  client.c  consumer.c  dictionary.c  main.c  server.c
src/data_structures/: btree.c  heap.c  queue.c
src/event_handlers/: confirm_handler.c  prepare_event_handler.c  put_event_handler.c  receiver_event_handler.c  send_event_handler.c  time_expired_handler.c
